feat: Correccion en cache de products